# monero-stratum

./: .gitignore  CMakeLists.txt  README.md  config.example.json  linux-run.sh  main.go  osx-debug.fish  osx-run.fish
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
cnutil/: .gitignore  CMakeLists.txt  cnutil.c  cnutil.go  cnutil.h  cnutil_test.go
cnutil/cnutilxx/: main.cpp  main.h
cnutil/src/: cnutil.cpp  cnutil.h
go-pool/pool/: pool.go
go-pool/rpc/: rpc.go
go-pool/storage/: redis.go  redis_test.go
go-pool/stratum/: api.go  blocks.go  handlers.go  miner.go  mmap.go  proto.go  stratum.go
go-pool/stratum/policy/: policy.go  smap.go
go-pool/util/: util.go  util_test.go
hashing/: .gitignore  CMakeLists.txt  hashing.go  hashing_test.go
hashing/src/: hashing.c  hashing.h
pool/: pool.go
rpc/: rpc.go
stratum/: api.go  blocks.go  handlers.go  miner.go  mmap.go  proto.go  stratum.go
util/: util.go  util_test.go
www/: index.html  script.js  style.css
